// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render CrossComponentSourceViewer correctly 1`] = `
<div>
  <CrossComponentSourceViewer
    branchLike={
      Object {
        "analysisDate": "2018-01-01",
        "excludedFromPurge": true,
        "isMain": true,
        "name": "master",
      }
    }
    issue={
      Object {
        "actions": Array [],
        "component": "main.js",
        "componentLongName": "main.js",
        "componentQualifier": "FIL",
        "componentUuid": "foo1234",
        "creationDate": "2017-03-01T09:36:01+0100",
        "flows": Array [
          Array [
            Object {
              "component": "main.js",
              "index": 0,
              "textRange": Object {
                "endLine": 2,
                "endOffset": 2,
                "startLine": 1,
                "startOffset": 1,
              },
            },
            Object {
              "component": "main.js",
              "index": 1,
              "textRange": Object {
                "endLine": 12,
                "endOffset": 2,
                "startLine": 10,
                "startOffset": 1,
              },
            },
          ],
        ],
        "fromHotspot": false,
        "key": "AVsae-CQS-9G3txfbFN2",
        "line": 25,
        "message": "Reduce the number of conditional operators (4) used in the expression",
        "project": "myproject",
        "projectKey": "foo",
        "projectName": "Foo",
        "rule": "javascript:S1067",
        "ruleName": "foo",
        "secondaryLocations": Array [
          Object {
            "component": "main.js",
            "textRange": Object {
              "endLine": 2,
              "endOffset": 2,
              "startLine": 1,
              "startOffset": 1,
            },
          },
          Object {
            "component": "main.js",
            "textRange": Object {
              "endLine": 2,
              "endOffset": 2,
              "startLine": 1,
              "startOffset": 1,
            },
          },
        ],
        "severity": "MAJOR",
        "status": "OPEN",
        "textRange": Object {
          "endLine": 26,
          "endOffset": 15,
          "startLine": 25,
          "startOffset": 0,
        },
        "transitions": Array [],
        "type": "BUG",
      }
    }
    issues={
      Array [
        Object {
          "actions": Array [],
          "component": "main.js",
          "componentLongName": "main.js",
          "componentQualifier": "FIL",
          "componentUuid": "foo1234",
          "creationDate": "2017-03-01T09:36:01+0100",
          "flows": Array [
            Array [
              Object {
                "component": "main.js",
                "textRange": Object {
                  "endLine": 2,
                  "endOffset": 2,
                  "startLine": 1,
                  "startOffset": 1,
                },
              },
              Object {
                "component": "main.js",
                "textRange": Object {
                  "endLine": 2,
                  "endOffset": 2,
                  "startLine": 1,
                  "startOffset": 1,
                },
              },
              Object {
                "component": "main.js",
                "textRange": Object {
                  "endLine": 2,
                  "endOffset": 2,
                  "startLine": 1,
                  "startOffset": 1,
                },
              },
            ],
            Array [
              Object {
                "component": "main.js",
                "textRange": Object {
                  "endLine": 2,
                  "endOffset": 2,
                  "startLine": 1,
                  "startOffset": 1,
                },
              },
              Object {
                "component": "main.js",
                "textRange": Object {
                  "endLine": 2,
                  "endOffset": 2,
                  "startLine": 1,
                  "startOffset": 1,
                },
              },
            ],
          ],
          "fromHotspot": false,
          "key": "AVsae-CQS-9G3txfbFN2",
          "line": 25,
          "message": "Reduce the number of conditional operators (4) used in the expression",
          "project": "myproject",
          "projectKey": "foo",
          "projectName": "Foo",
          "rule": "javascript:S1067",
          "ruleName": "foo",
          "secondaryLocations": Array [
            Object {
              "component": "main.js",
              "textRange": Object {
                "endLine": 2,
                "endOffset": 2,
                "startLine": 1,
                "startOffset": 1,
              },
            },
            Object {
              "component": "main.js",
              "textRange": Object {
                "endLine": 2,
                "endOffset": 2,
                "startLine": 1,
                "startOffset": 1,
              },
            },
          ],
          "severity": "MAJOR",
          "status": "OPEN",
          "textRange": Object {
            "endLine": 26,
            "endOffset": 15,
            "startLine": 25,
            "startOffset": 0,
          },
          "transitions": Array [],
          "type": "BUG",
        },
      ]
    }
    locations={
      Array [
        Object {
          "component": "main.js",
          "index": 0,
          "textRange": Object {
            "endLine": 2,
            "endOffset": 2,
            "startLine": 1,
            "startOffset": 1,
          },
        },
        Object {
          "component": "main.js",
          "index": 1,
          "textRange": Object {
            "endLine": 12,
            "endOffset": 2,
            "startLine": 10,
            "startOffset": 1,
          },
        },
      ]
    }
    onIssueChange={[MockFunction]}
    onIssueSelect={[MockFunction]}
    onLoaded={[Function]}
    onLocationSelect={[MockFunction]}
    scroll={[Function]}
  />
</div>
`;

exports[`should render SourceViewer correctly: all secondary locations on same line 1`] = `
<div>
  <CrossComponentSourceViewer
    branchLike={
      Object {
        "analysisDate": "2018-01-01",
        "excludedFromPurge": true,
        "isMain": true,
        "name": "master",
      }
    }
    issue={
      Object {
        "actions": Array [],
        "component": "main.js",
        "componentLongName": "main.js",
        "componentQualifier": "FIL",
        "componentUuid": "foo1234",
        "creationDate": "2017-03-01T09:36:01+0100",
        "flows": Array [
          Array [
            Object {
              "component": "main.js",
              "index": 0,
              "textRange": Object {
                "endLine": 2,
                "endOffset": 2,
                "startLine": 1,
                "startOffset": 1,
              },
            },
            Object {
              "component": "main.js",
              "index": 1,
              "textRange": Object {
                "endLine": 2,
                "endOffset": 2,
                "startLine": 1,
                "startOffset": 1,
              },
            },
            Object {
              "component": "main.js",
              "index": 2,
              "textRange": Object {
                "endLine": 2,
                "endOffset": 2,
                "startLine": 1,
                "startOffset": 1,
              },
            },
          ],
        ],
        "fromHotspot": false,
        "key": "AVsae-CQS-9G3txfbFN2",
        "line": 25,
        "message": "Reduce the number of conditional operators (4) used in the expression",
        "project": "myproject",
        "projectKey": "foo",
        "projectName": "Foo",
        "rule": "javascript:S1067",
        "ruleName": "foo",
        "secondaryLocations": Array [
          Object {
            "component": "main.js",
            "textRange": Object {
              "endLine": 2,
              "endOffset": 2,
              "startLine": 1,
              "startOffset": 1,
            },
          },
          Object {
            "component": "main.js",
            "textRange": Object {
              "endLine": 2,
              "endOffset": 2,
              "startLine": 1,
              "startOffset": 1,
            },
          },
        ],
        "severity": "MAJOR",
        "status": "OPEN",
        "textRange": Object {
          "endLine": 26,
          "endOffset": 15,
          "startLine": 25,
          "startOffset": 0,
        },
        "transitions": Array [],
        "type": "BUG",
      }
    }
    issues={
      Array [
        Object {
          "actions": Array [],
          "component": "main.js",
          "componentLongName": "main.js",
          "componentQualifier": "FIL",
          "componentUuid": "foo1234",
          "creationDate": "2017-03-01T09:36:01+0100",
          "flows": Array [
            Array [
              Object {
                "component": "main.js",
                "textRange": Object {
                  "endLine": 2,
                  "endOffset": 2,
                  "startLine": 1,
                  "startOffset": 1,
                },
              },
              Object {
                "component": "main.js",
                "textRange": Object {
                  "endLine": 2,
                  "endOffset": 2,
                  "startLine": 1,
                  "startOffset": 1,
                },
              },
              Object {
                "component": "main.js",
                "textRange": Object {
                  "endLine": 2,
                  "endOffset": 2,
                  "startLine": 1,
                  "startOffset": 1,
                },
              },
            ],
            Array [
              Object {
                "component": "main.js",
                "textRange": Object {
                  "endLine": 2,
                  "endOffset": 2,
                  "startLine": 1,
                  "startOffset": 1,
                },
              },
              Object {
                "component": "main.js",
                "textRange": Object {
                  "endLine": 2,
                  "endOffset": 2,
                  "startLine": 1,
                  "startOffset": 1,
                },
              },
            ],
          ],
          "fromHotspot": false,
          "key": "AVsae-CQS-9G3txfbFN2",
          "line": 25,
          "message": "Reduce the number of conditional operators (4) used in the expression",
          "project": "myproject",
          "projectKey": "foo",
          "projectName": "Foo",
          "rule": "javascript:S1067",
          "ruleName": "foo",
          "secondaryLocations": Array [
            Object {
              "component": "main.js",
              "textRange": Object {
                "endLine": 2,
                "endOffset": 2,
                "startLine": 1,
                "startOffset": 1,
              },
            },
            Object {
              "component": "main.js",
              "textRange": Object {
                "endLine": 2,
                "endOffset": 2,
                "startLine": 1,
                "startOffset": 1,
              },
            },
          ],
          "severity": "MAJOR",
          "status": "OPEN",
          "textRange": Object {
            "endLine": 26,
            "endOffset": 15,
            "startLine": 25,
            "startOffset": 0,
          },
          "transitions": Array [],
          "type": "BUG",
        },
      ]
    }
    locations={
      Array [
        Object {
          "component": "main.js",
          "index": 0,
          "textRange": Object {
            "endLine": 2,
            "endOffset": 2,
            "startLine": 1,
            "startOffset": 1,
          },
        },
        Object {
          "component": "main.js",
          "index": 1,
          "textRange": Object {
            "endLine": 2,
            "endOffset": 2,
            "startLine": 1,
            "startOffset": 1,
          },
        },
        Object {
          "component": "main.js",
          "index": 2,
          "textRange": Object {
            "endLine": 2,
            "endOffset": 2,
            "startLine": 1,
            "startOffset": 1,
          },
        },
      ]
    }
    onIssueChange={[MockFunction]}
    onIssueSelect={[MockFunction]}
    onLoaded={[Function]}
    onLocationSelect={[MockFunction]}
    scroll={[Function]}
  />
</div>
`;

exports[`should render SourceViewer correctly: default 1`] = `
<div>
  <CrossComponentSourceViewer
    branchLike={
      Object {
        "analysisDate": "2018-01-01",
        "excludedFromPurge": true,
        "isMain": true,
        "name": "master",
      }
    }
    issue={
      Object {
        "actions": Array [],
        "component": "main.js",
        "componentLongName": "main.js",
        "componentQualifier": "FIL",
        "componentUuid": "foo1234",
        "creationDate": "2017-03-01T09:36:01+0100",
        "flows": Array [],
        "fromHotspot": false,
        "key": "AVsae-CQS-9G3txfbFN2",
        "line": 25,
        "message": "Reduce the number of conditional operators (4) used in the expression",
        "project": "myproject",
        "projectKey": "foo",
        "projectName": "Foo",
        "rule": "javascript:S1067",
        "ruleName": "foo",
        "secondaryLocations": Array [],
        "severity": "MAJOR",
        "status": "OPEN",
        "textRange": Object {
          "endLine": 26,
          "endOffset": 15,
          "startLine": 25,
          "startOffset": 0,
        },
        "transitions": Array [],
        "type": "BUG",
      }
    }
    issues={
      Array [
        Object {
          "actions": Array [],
          "component": "main.js",
          "componentLongName": "main.js",
          "componentQualifier": "FIL",
          "componentUuid": "foo1234",
          "creationDate": "2017-03-01T09:36:01+0100",
          "flows": Array [],
          "fromHotspot": false,
          "key": "AVsae-CQS-9G3txfbFN2",
          "line": 25,
          "message": "Reduce the number of conditional operators (4) used in the expression",
          "project": "myproject",
          "projectKey": "foo",
          "projectName": "Foo",
          "rule": "javascript:S1067",
          "ruleName": "foo",
          "secondaryLocations": Array [],
          "severity": "MAJOR",
          "status": "OPEN",
          "textRange": Object {
            "endLine": 26,
            "endOffset": 15,
            "startLine": 25,
            "startOffset": 0,
          },
          "transitions": Array [],
          "type": "BUG",
        },
      ]
    }
    locations={Array []}
    onIssueChange={[MockFunction]}
    onIssueSelect={[MockFunction]}
    onLoaded={[Function]}
    onLocationSelect={[MockFunction]}
    scroll={[Function]}
  />
</div>
`;

exports[`should render SourceViewer correctly: single secondary location 1`] = `
<div>
  <CrossComponentSourceViewer
    branchLike={
      Object {
        "analysisDate": "2018-01-01",
        "excludedFromPurge": true,
        "isMain": true,
        "name": "master",
      }
    }
    issue={
      Object {
        "actions": Array [],
        "component": "main.js",
        "componentLongName": "main.js",
        "componentQualifier": "FIL",
        "componentUuid": "foo1234",
        "creationDate": "2017-03-01T09:36:01+0100",
        "flows": Array [
          Array [
            Object {
              "component": "main.js",
              "index": 0,
              "textRange": Object {
                "endLine": 2,
                "endOffset": 2,
                "startLine": 1,
                "startOffset": 1,
              },
            },
          ],
        ],
        "fromHotspot": false,
        "key": "AVsae-CQS-9G3txfbFN2",
        "line": 25,
        "message": "Reduce the number of conditional operators (4) used in the expression",
        "project": "myproject",
        "projectKey": "foo",
        "projectName": "Foo",
        "rule": "javascript:S1067",
        "ruleName": "foo",
        "secondaryLocations": Array [
          Object {
            "component": "main.js",
            "textRange": Object {
              "endLine": 2,
              "endOffset": 2,
              "startLine": 1,
              "startOffset": 1,
            },
          },
          Object {
            "component": "main.js",
            "textRange": Object {
              "endLine": 2,
              "endOffset": 2,
              "startLine": 1,
              "startOffset": 1,
            },
          },
        ],
        "severity": "MAJOR",
        "status": "OPEN",
        "textRange": Object {
          "endLine": 26,
          "endOffset": 15,
          "startLine": 25,
          "startOffset": 0,
        },
        "transitions": Array [],
        "type": "BUG",
      }
    }
    issues={
      Array [
        Object {
          "actions": Array [],
          "component": "main.js",
          "componentLongName": "main.js",
          "componentQualifier": "FIL",
          "componentUuid": "foo1234",
          "creationDate": "2017-03-01T09:36:01+0100",
          "flows": Array [
            Array [
              Object {
                "component": "main.js",
                "textRange": Object {
                  "endLine": 2,
                  "endOffset": 2,
                  "startLine": 1,
                  "startOffset": 1,
                },
              },
              Object {
                "component": "main.js",
                "textRange": Object {
                  "endLine": 2,
                  "endOffset": 2,
                  "startLine": 1,
                  "startOffset": 1,
                },
              },
              Object {
                "component": "main.js",
                "textRange": Object {
                  "endLine": 2,
                  "endOffset": 2,
                  "startLine": 1,
                  "startOffset": 1,
                },
              },
            ],
            Array [
              Object {
                "component": "main.js",
                "textRange": Object {
                  "endLine": 2,
                  "endOffset": 2,
                  "startLine": 1,
                  "startOffset": 1,
                },
              },
              Object {
                "component": "main.js",
                "textRange": Object {
                  "endLine": 2,
                  "endOffset": 2,
                  "startLine": 1,
                  "startOffset": 1,
                },
              },
            ],
          ],
          "fromHotspot": false,
          "key": "AVsae-CQS-9G3txfbFN2",
          "line": 25,
          "message": "Reduce the number of conditional operators (4) used in the expression",
          "project": "myproject",
          "projectKey": "foo",
          "projectName": "Foo",
          "rule": "javascript:S1067",
          "ruleName": "foo",
          "secondaryLocations": Array [
            Object {
              "component": "main.js",
              "textRange": Object {
                "endLine": 2,
                "endOffset": 2,
                "startLine": 1,
                "startOffset": 1,
              },
            },
            Object {
              "component": "main.js",
              "textRange": Object {
                "endLine": 2,
                "endOffset": 2,
                "startLine": 1,
                "startOffset": 1,
              },
            },
          ],
          "severity": "MAJOR",
          "status": "OPEN",
          "textRange": Object {
            "endLine": 26,
            "endOffset": 15,
            "startLine": 25,
            "startOffset": 0,
          },
          "transitions": Array [],
          "type": "BUG",
        },
      ]
    }
    locations={
      Array [
        Object {
          "component": "main.js",
          "index": 0,
          "textRange": Object {
            "endLine": 2,
            "endOffset": 2,
            "startLine": 1,
            "startOffset": 1,
          },
        },
      ]
    }
    onIssueChange={[MockFunction]}
    onIssueSelect={[MockFunction]}
    onLoaded={[Function]}
    onLocationSelect={[MockFunction]}
    scroll={[Function]}
  />
</div>
`;
